Fix keyFilename path for Google Cloud Video Intelligence API

--- a/my-backend/.env
+++ b/my-backend/.env
@@ -1,2 +1,3 @@
-# Shared environment variables
-OPENAI_API_KEY='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'
+GOOGLE_CLOUD_PROJECT_ID=thinking-digit-447719-e5
+GOOGLE_CLOUD_KEYFILE=C:/Users/brads/memory_app/thinking-digit-447719-e5-4de8e4b19a4f.json
+OPENAI_API_KEY='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'
