--- a/my-backend/package.json
+++ b/my-backend/package.json
@@ -18,30 +18,7 @@
     "nodemailer": "^6.9.16",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "tesseract.js": "^6.0.0"
-  }
-}
-{
-  "name": "my-backend",
-  "version": "1.0.0",
-  "description": "",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "dependencies": {
-    "axios": "^1.7.9",
-    "bcrypt": "^5.1.1",
-    "cors": "^2.8.5",
-    "express": "^4.21.2",
-    "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.9.3",
-    "nodemailer": "^6.9.16",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "tesseract.js": "^6.0.0"
+    "tesseract.js": "^6.0.0",
+    "axios": "^1.7.9"
   }
 }
